--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,6 @@ description: Trained mathematician learning code and other data science topics.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: catVersionOfMe.jpg
-# https://github.com/wh33les/Blog/blob/master/images/catVersionOfMe.jpg
-# wh33les.github.io/Blog/images/catVersionOfMe.jpg
-# https://github.com/wh33les/wh33les.github.io/blob/master/images/catVersionOfMe.jpg
-# https://raw.githubusercontent.com/wh33les/wh33les.github.io/master/images/catVersionOfMe.jpg
-# https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -50,7 +45,7 @@ url: #https://wh33les.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: #"/codingblog"
+baseurl: "" #"/codingblog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
