--- a/_config.yml
+++ b/_config.yml
@@ -39,13 +39,13 @@ google_analytics: UA-100299463-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: #https://wh33les.github.io
+url: https://wh33les.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "" #"/codingblog"
+baseurl: "/codingblog" #""
 
 #
 # !! You don't need to change any of the configuration flags below !!
